--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "Saurabh",
   "license": "ISC",
   "devDependencies": {
+    "buffer": "^6.0.3",
     "parcel": "^2.10.0"
   },
   "dependencies": {
+    "axios": "^1.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
