--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "devDependencies": {
     "buffer": "^6.0.3",
-    "parcel": "^2.10.0"
+    "parcel": "^2.10.0",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5"
   },
   "dependencies": {
     "axios": "^1.6.1",
